# advent-of-code

./: .drone.yml  .gitignore  Pipfile  README.md  day1.py  day1_constants.py  main.py  test_day1.py
2018/: .drone.yml  .gitignore  README.md
2018/advent_of_code/day1/: day1_constants.py  day1_test.py
2018/advent_of_code/day2/: day2_constants.py  day2_test.py
2019/: .gitignore  README.md  pyproject.toml
2019/Day_1/: fuel_module.py  fuel_module_test.py
2019/Day_2/: day2_pt1.py  day2_test.py
2020/: pyproject.toml
2021/: .gitignore  pyproject.toml
2021/src/day1/: day1.py  day1__test.py  day1_puzzle_input.py  day1_test.py  day1_utils.py
2021/src/day2/: day2.py  day2_puzzle_input.py  day2_utls.py
2021/src/day3/: day3.py  day3_puzzle_input.py  day3_test.py  day3_utils.py
2021/src/utils/: convert_txt_list.py
advent_of_code/day1/: 1st_challenge.csv  day1.py  day1_constants.py  day1_main.py  day1_test.py  test_day1.py
advent_of_code/day2/: box_id_tally.py  day2.py  day2_main.py  day2_test.py
csv/: 2nd_challenge.csv
