[tool.poetry]
name = "2019"
version = "1.0.0"
description = "advent of code 2019!"
authors = ["stvnksslr <stvnksslr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.2.2"
pytest-cov = "^2.8.1"
pytest-sugar = "^0.9.2"
flake8-pytest = "^1.3"
flake8-bandit = "^2.1.2"
flake8-functions = "^0.0.2"
flake8-variables-names = "^0.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
