[tool.poetry]
name = "advent-of-code-2020"
version = "0.0.0"
description = "project containing the solutions for advent of code 2020"
authors = ["Steven Kessler <stvnksslr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8"
pytest-sugar = "^0.9.2"
pep8-naming = "^0.9.0"
flake8 = "^3.7"
flake8-pytest = "^1.3"
flake8-bandit = "^2.1.2"
flake8-functions = "^0.0.2"
flake8-variables-names = "^0.0.3"
flake8-bugbear = "^19.8.0"
flake8-eradicate = "^0.2.3"
pytest-asyncio = "^0.10.0"
flake8-comprehensions = "^3.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
